tests/NormalTests/paczka1/fuzzy1/73969407.err
Error in line 6: 5QuQFs7ui9l A880 34,2
Error in line 20: TjVGdMyQczR S243 3,5
Error in line 22: M9SFK3tIHwj S916 91,9
Error in line 39: L6OvlDdVuH S916 70,6
